# RegressionModel

./: README.md  dockerfile  exploration.py  geo_processing.py  map.html  maps.py  models.py  pyproject.toml  requirements.txt  ridge_polyfeat_target_quantile.joblib  test.py  train_model.py
app/: home.py  housing_manipulated.parquet  requirements.txt
