[tool.poetry]
name = "regressionmodel"
version = "0.1.0"
description = ""
authors = ["getFelipe <felipesbsmachado@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
pyarrow = "^18.1.0"
folium = "^0.19.2"
geopandas = "^1.0.1"
scikit-learn = "^1.6.0"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
